--- a/BallanceTdbReader.csproj
+++ b/BallanceTdbReader.csproj
@@ -3,15 +3,16 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <PackageId>Swung0x48.Ballance.TdbReader</PackageId>
-    <Version>0.0.1</Version>
+    <Version>0.0.3</Version>
     <Authors>Swung0x48</Authors>
     <PackageTags></PackageTags>
     <Description>
       A Nuget package to parse Ballance save file (Database.tdb).
     </Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <RepositoryUrl>https://github.com/Swung0x48/BallanceRecordModifier</RepositoryUrl>
+    <RepositoryUrl>https://github.com/Swung0x48/BallanceTdbReader</RepositoryUrl>
     <Nullable>enable</Nullable>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
 </Project>
