--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 /bin
 /obj
+.idea/.idea.BallanceTdbReader.dir/.idea/encodings.xml
+.idea/.idea.BallanceTdbReader.dir/.idea/indexLayout.xml
+.idea/.idea.BallanceTdbReader.dir/.idea/riderModule.iml
+.idea/.idea.BallanceTdbReader.dir/.idea/vcs.xml
+.idea/.idea.BallanceTdbReader.dir/.idea/codeStyles/codeStyleConfig.xml
+.idea/.idea.BallanceTdbReader.dir/riderModule.iml
+.DS_Store
